tests/tooling/fixtures/native/recovery/negative/negative_return_bool_pointer_declarator.objc3
// Negative fixture: bool return pointer declarator remains unsupported.
// Expected diagnostic code(s): O3S206.
module NegativeReturnBoolPointerDeclarator;

fn pick(flag: bool) -> bool* {
  return flag;
}

fn main() -> i32 {
  if (pick(true)) {
    return 1;
  }
  return 0;
}
